examples/test/conf/EdgionPlugins/DirectEndpoint/Service_default_direct-endpoint-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: direct-endpoint-backend
  namespace: default
spec:
  ports:
    - name: http
      port: 30001
      targetPort: 30001
      protocol: TCP
